# origin-voicebox

./: .bumpversion.cfg  README.md  package.json
.github/workflows/: release.yml
app/: package.json
app/src/: App.tsx  main.tsx  router.tsx
app/src/components/: Sidebar.tsx
app/src/components/AudioPlayer/: AudioPlayer.tsx
app/src/components/AudioTab/: AudioTab.tsx
app/src/components/Generation/: FloatingGenerateBox.tsx  GenerationForm.tsx
app/src/components/History/: HistoryTable.tsx
app/src/components/ui/: checkbox.tsx  (+6 more)
app/src/hooks/: useAutoUpdater.ts  useAutoUpdater.tsx
app/src/platform/: webPlatform.ts
app/src/stores/: serverStore.ts
backend/: Dockerfile  channels.py  database.py  export_import.py  history.py  main.py  models.py  platform_detect.py  profiles.py  requirements-cloud.txt  stories.py  test_cuda_compression.py  test_r2_upload.sh  transcribe.py  tts.py  voicebox-server.spec
backend/backends/: __init__.py  replicate_backend.py
backend/providers/: base.py  bundled.py  local.py
backend/utils/: cache.py
docs/: r2-setup.md
docs/overview/: docker.mdx  installation.mdx
docs/plans/: MLX_AUDIO.md
landing/: package.json
landing/src/app/: page.tsx
providers/pytorch-cpu/: build.py  tts-provider-pytorch-cpu.spec
providers/pytorch-cuda/: build.py  tts-provider-pytorch-cuda.spec
tauri/: package.json
tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: audio_output.rs  main.rs
voicebox.icon/: icon.json
web/: index.html  package.json  vite.config.ts
(+23 files in other folders)
